k8s/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: NodePort
  ports:
    - name: plex
      port: 32400
      targetPort: plex
      nodePort: 32400
    - name: gdm-1
      port: 32410
      targetPort: gdm-1
      nodePort: 32410
      protocol: UDP
    - name: gdm-2
      port: 32412
      targetPort: gdm-2
      nodePort: 32412
      protocol: UDP
    - name: gdm-3
      port: 32413
      targetPort: gdm-3
      nodePort: 32413
      protocol: UDP
    - name: gdm-4
      port: 32414
      targetPort: gdm-4
      nodePort: 32414
      protocol: UDP
