k8s/plex/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("plex.mchill.duckdns.org")
      kind: Rule
      services:
        - name: plex
          port: 32400
